erDiagram
    BusinessPartner ||--o{ EstimateCalc : "客先"
    BusinessPartner ||--o{ Order : "客先/仕入先/配送先"
    EstimateCalc ||--o{ QuotationCalc : "見積→御見積"
    Quotation ||--|{ QuotationCalc : "明細束ね"
    Quotation ||--o{ ProductMaster : "確定→製品化"
    ProductMaster ||--|{ ProductProcess : "工程ルーティング"
    ProductMaster ||--|{ ProductMaterial : "材料 BOM"
    ProductMaster ||--o{ Order : "受注対象"
    Order ||--|{ OrderDetail : "明細"
    Order ||--o{ OrderProcess : "工程予定"
    SheetUnitPrice }o--|| ProductMaster : "13 項目複合キーで単価決定"
    PlateMold }o--o{ ProductMaster : "版型流用"
    FscChecklist }o--|| ProductMaster : "環境認証"
